# TransportManager

./: .gitignore  .gitignore.save  README.md  VeiculoAPP.sln
VeiculoAPP/: CMakeLists.txt  EmpresaTransporte.cpp  TransporteAereo.cpp  TransporteAereo.h  TransporteAquatico.cpp  VeiculoAPP.cpp  VeiculoAPP.vcxproj  VeiculoAPP.vcxproj.filters
VeiculoAPP/EmpresaTransporte/: EmpresaTransporte.h
VeiculoAPP/TransporteAquatico/: TransporteAquatico.h
VeiculoAPP/TransporteTerrestre/: TransporteTerrestre.cpp  TransporteTerrestre.h
VeiculoAPP/Veiculo/: Veiculo.h
